# crabguard

./: .gitignore  CHANGELOG.md  LICENSE  README.md  crabguard-1.0.1-py3-none-any.whl  index.html  pyproject.toml
.github/workflows/: publish.yml  test.yml
crabguard/: __init__.py  cli.py  config.py  licensing.py  models.py  scanner.py
crabguard/reporters/: __init__.py  html_reporter.py  pdf_reporter.py
crabguard/scanners/: __init__.py
crabguard/scanners/active/: __init__.py  discovery.py  injection.py  redirect.py
crabguard/scanners/passive/: __init__.py  content.py  cookies.py  disclosure.py  headers.py  tls.py
crabguard/utils/: __init__.py  http_client.py  patterns.py
